--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Personal Website</title>
+    <title>My CSS Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
   </head>
@@ -57,7 +57,7 @@
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 My Page. All rights reserved.</p>
+      <p>&copy; 2023 Digambar Page. All rights reserved.</p>
     </footer>
   </body>
 </html>
