repo github link

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       bottom: 0;
       width: 100%;
     }
+    a{
+      color: white;
+      text-decoration: none;
+    }
+    a:hover{
+      color:lightblue;
+    }
 
   </style>
 
@@ -58,6 +65,9 @@
     </main>
     <footer>
       <p>&copy; 2023 Digambar Page. All rights reserved.</p>
+      <div>
+        <a href="https://github.com/Digambar1411/CSS-101" target="_blank">view on github</a>
+      </div>
     </footer>
   </body>
 </html>
