--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <title>My CSS Learning</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/spcss@0.9.0.css"> -->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css.css"> -->
+<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css.css"> -->
+<!-- <link rel="stylesheet" href="https://latex.now.sh/style.css.css"> -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/chota@latest.css"> -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/mvp.css.css"> -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css.css"> -->
+<!-- <link rel="stylesheet" href="https://unpkg.com/@sakun/system.css.css"> -->
   </head>
-  
-  <style>
+
+
+ 
+ <style>
     header,footer{
-      background-color: #673ab7;
+      background-color: #568787;
       color: white;
       text-align: center;
       padding: 1rem;
@@ -51,15 +61,15 @@
       <section>
         <h2>About Me</h2>
         <p>
-          Hello, World! I love coding. I am here to learn CSS.
+          Hello, World! I am Digambar, I am here to learn CSS.
         </p>
       </section>
       <section>
         <h2>My Interests</h2>
         <ul>
           <li>Coding</li>
-          <li>Coding</li>
-          <li>Coding</li>
+          <li>Watching movies</li>
+          <li>Listening musics</li>
         </ul>
       </section>
     </main>
